FirstGitProj/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AEB_Check_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AEB Check Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPCS_Account_ID__c</fullName>
        <externalId>true</externalId>
        <label>SAP Account ID</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrokerID__c</fullName>
        <label>Broker ID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1234</fullName>
                </value>
                <value>
                    <fullName>2004154-CA-CARSON INTL(AV PO)</fullName>
                </value>
                <value>
                    <fullName>2004155-CA-COLE INTL(AV)</fullName>
                </value>
                <value>
                    <fullName>2004156-CA-COLE INTL(SH)</fullName>
                </value>
                <value>
                    <fullName>2004157-CA-LIVINGSTON INTL</fullName>
                </value>
                <value>
                    <fullName>2004158-CA-CARSON INTL(SH)</fullName>
                </value>
                <value>
                    <fullName>2004161-CA-WILSON INTL</fullName>
                </value>
                <value>
                    <fullName>2004167-CA-AFFILIATED CUSTOM BROKER</fullName>
                </value>
                <value>
                    <fullName>2008296-CA-CARSON CUSTOM BROKER LTD</fullName>
                </value>
                <value>
                    <fullName>2009730-US-A.N. DERINGER</fullName>
                </value>
                <value>
                    <fullName>2009731-CA-HARTWICK O&apos;SHEA &amp; CARTWRIGHT LRD</fullName>
                </value>
                <value>
                    <fullName>2009732-CA-PERCY H DAVIS LTD</fullName>
                </value>
                <value>
                    <fullName>2009739-CA-APASS CUSTOM BROKERS INC</fullName>
                </value>
                <value>
                    <fullName>2009743-CA-RUSSELL A FARROW LIMITED</fullName>
                </value>
                <value>
                    <fullName>2009744-CA-CHARLES HIGGERTY LIMITED</fullName>
                </value>
                <value>
                    <fullName>2009745-CA-H. H. SMITH LIMITED</fullName>
                </value>
                <value>
                    <fullName>2009746-CA-FEDEX TRADE NETWORKS</fullName>
                </value>
                <value>
                    <fullName>2009747-CA-LIVINGSTON INTL</fullName>
                </value>
                <value>
                    <fullName>2009748-CA-AFFILIATED CUSTOM BROKER</fullName>
                </value>
                <value>
                    <fullName>2009749-CA-FEDEX</fullName>
                </value>
                <value>
                    <fullName>2009750-CA-GHY INTL</fullName>
                </value>
                <value>
                    <fullName>2010237-CA-WILLIAM RUTHERFORD LTD.</fullName>
                </value>
                <value>
                    <fullName>2011376-CA-FRONTIER SUPPLY CHAIN SOLUTIONS</fullName>
                </value>
                <value>
                    <fullName>2011708-CA-KINTETSU WORLD EXPRESS (CANADA) INC</fullName>
                </value>
                <value>
                    <fullName>2011760-CA-W.G. MCKAY LIMITED</fullName>
                </value>
                <value>
                    <fullName>2012012-CA-AXXESS INTERNATIONAL INC</fullName>
                </value>
                <value>
                    <fullName>2012299-CA-LEONARD BOYES</fullName>
                </value>
                <value>
                    <fullName>2012353-US-BDP INTERNATIONAL</fullName>
                </value>
                <value>
                    <fullName>2012985-CA-DHL GLOBAL FORWARDING (CANADA) INC.</fullName>
                </value>
                <value>
                    <fullName>2013065-CA-COLE INTERNATIONAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broker_ID__c</fullName>
        <label>Broker ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cont_setup_with_SAP_already_existing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cont. setup with SAP # already existing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <label>Customer Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>D1 - DEALER</fullName>
                </value>
                <value>
                    <fullName>D2 - RP LUMBER</fullName>
                </value>
                <value>
                    <fullName>JS - JOBSITE</fullName>
                </value>
                <value>
                    <fullName>MH - MANUF HOUSING</fullName>
                </value>
                <value>
                    <fullName>SO - SOLAR EXCLUSIVE</fullName>
                </value>
                <value>
                    <fullName>WH - WAREHOUSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Origin__c</fullName>
        <label>Customer Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Export</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Warehouse__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Default Plant</label>
        <referenceTo>Warehouse__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delete_all_notes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete all notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delete_all_notes_and_add_notes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete all notes and add notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDPAR__c</fullName>
        <label>EDPAR #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Type__c</fullName>
        <label>Freight Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>|Z1|FLATBED TRUCKLOAD</fullName>
                </value>
                <value>
                    <fullName>|Z8|CUSTOMER PICK UP</fullName>
                </value>
                <value>
                    <fullName>|Z0|CANADA CUST PICK UP</fullName>
                </value>
                <value>
                    <fullName>|Y3|RETAIL LTL</fullName>
                </value>
                <value>
                    <fullName>|Y1|RETAIL FLATBED TL</fullName>
                </value>
                <value>
                    <fullName>|Y2|RETAIL VAN TL</fullName>
                </value>
                <value>
                    <fullName>|Z3|MAXI FLAT BED</fullName>
                </value>
                <value>
                    <fullName>|Z4|INTERMODAL CONTAINER</fullName>
                </value>
                <value>
                    <fullName>|Z6|VAN TRUCK LOAD</fullName>
                </value>
                <value>
                    <fullName>|Z7|RAILCAR</fullName>
                </value>
                <value>
                    <fullName>|Z2|LESS THAN TRUCKLOAD</fullName>
                </value>
                <value>
                    <fullName>|Z9|EXPORT 20FT CNTR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hierarchy_Level_BPCS__c</fullName>
        <description>Both Insulation and Pipe have &quot;BPCS Hierarchy Level&quot; field with following values:
1-GPO, 2-Group Code, 3-Corporate Account, 4-Order For, 5-Ship To
Roofing does not use 1-GPO or 2-Group Code in BPCS, thus only using:
3-Corporate Account, 4-Order For, 5-Ship To
In SAP terminology this translates to:
Sold To (Corporate)
Bill To (Order For)
Ship To</description>
        <inlineHelpText>Payer (Corporate)
Sold To (Order For)
Ship To (Ship To)</inlineHelpText>
        <label>Hierarchy Level - SAP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Corporate Account</fullName>
                </value>
                <value>
                    <fullName>3-Ship To</fullName>
                </value>
                <value>
                    <fullName>4-Sold To</fullName>
                </value>
                <value>
                    <fullName>2-Payer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keep_existing_notes_and_add_notes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keep existing notes and add notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_4_digits_could_not_be_found_on_USPS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last 4 digits could not be found on USPS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logistic_and_Ship_to_Notes__c</fullName>
        <label>Logistic and Ship-to Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_of_deliveries_Accepted_per_day__c</fullName>
        <label>No.of deliveries Accepted per day</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RG - REGULAR</fullName>
                </value>
                <value>
                    <fullName>CS - COMPLAINT</fullName>
                </value>
                <value>
                    <fullName>DO - DONATION</fullName>
                </value>
                <value>
                    <fullName>EX - EXPORT</fullName>
                </value>
                <value>
                    <fullName>MS - MISCELLANEOUS</fullName>
                </value>
                <value>
                    <fullName>SA - SAMPLES</fullName>
                </value>
                <value>
                    <fullName>SB - SPECIAL BUY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Sheet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price Sheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>This field is to capture customer on-boarding request type</description>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Ship-To Account Request</fullName>
                </value>
                <value>
                    <fullName>Change Ship-To Account Information Request</fullName>
                </value>
                <value>
                    <fullName>Partner Ship-To Account Request</fullName>
                </value>
                <value>
                    <fullName>Un-Partner Ship-To Account Request</fullName>
                </value>
                <value>
                    <fullName>Reactivate Ship-To Account Request</fullName>
                </value>
                <value>
                    <fullName>Deactivate Ship-To Account Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDCCMID__c</fullName>
        <description>SFDCCMID is a unique record identifier  for customer master on-boarding</description>
        <inlineHelpText>SFDCCMID is a unique record identifier  for customer master on-boarding</inlineHelpText>
        <label>SFDCCMID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <inlineHelpText>Sales Org</inlineHelpText>
        <label>Sales Org</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_office__c</fullName>
        <label>Sales office</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Code_BPCS__c</fullName>
        <label>Status Code - SAP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_Customer_Use_EDI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Will Customer Use EDI</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>Customer_Master_Request</fullName>
        <active>true</active>
        <description>This record type is to capture customer on-boarding request</description>
        <label>Customer Master Request</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>